
Fri Nov 12 15:57:40 PST 1999
(KainX)

Wrap-around history.

-------------------------------------------------------------------------------

Sat Nov 13 00:34:12 GMT 1999
(gilbertt)

Thanks to code from Steve Brunton <brunton@dweeb.turner.com>, E-Mixer should
now support IRIX. Please test this for me you funny hardware people you ;-)

-------------------------------------------------------------------------------

Sat Nov 13 21:03:02 GMT 1999
(gilbertt)

Changes to : E-ScreenShoot.[ch] clock.[ch]

Renamed "Rotator" to "Mesh", and added new cloak-animation, "Funky Mesh"

I was bored. Ok?

-------------------------------------------------------------------------------

Sun Nov 14 00:33:11 GMT 1999
(gilbertt)

Added E-ScreenSave. Will control xscreensaver, but currently just locks the
screen on demand.

-------------------------------------------------------------------------------

Sun Nov 14 01:34:43 GMT 1999
(gilbertt)

Should have quashed all lag in E-SD. Please let me know

-------------------------------------------------------------------------------

Sun Nov 14 02:24:13 GMT 1999
(gilbertt)

Added new animation to E-SD, called history, it is responsive to sound, and
will hopefully keep StriderZ off my back for a day or two :P

-------------------------------------------------------------------------------

Sun Nov 14 02:53:54 GMT 1999
(gilbertt)

Added another animation to E-SD, "History Bar", its cooler.

-------------------------------------------------------------------------------

Mon Nov 15 12:30:13 PST 1999
(KainX)

Another morning, another cleanup.  Doesn't anyone use warning flags besides
me?

-------------------------------------------------------------------------------

Tue Nov 16 17:10:44 EST 1999
(StriderZ)

Added a textbox cursor.

-------------------------------------------------------------------------------

Wed Nov 17 14:18:42 PST 1999
(KainX)

Cleanups to the libgtop stuff.  Someone (Mark) please tell me if this doesn't
work on Solaris....