@@ -19,7 +19,7 @@ E-Cpu.epplet E-Biff.epplet E-Power.epplet Emix.epplet @TEST_PROGS@ \
 E-MemWatch.epplet E-Disk.epplet E-Areas.epplet \
 E-NetFlame.epplet E-Sys.epplet E-ScreenShoot.epplet E-Slides.epplet \
 E-Xss.epplet E-Mountbox.epplet E-Exec.epplet $(E_Mixer_prog) E-SD.epplet \
-E-ScreenSave.epplet
+E-ScreenSave.epplet E-NetGraph.epplet
 
 EXTRA_PROGRAMS = EppletTest.epplet EppletConfigTest.epplet
 
@@ -107,6 +107,11 @@ E_ScreenShoot_epplet_SOURCES = \
 E-ScreenShoot.c E-ScreenShoot.h cloak.c utils.c utils.h cloak.h
 E_ScreenShoot_epplet_DEPENDENCIES = $(top_srcdir)/api/libepplet.la
 E_ScreenShoot_epplet_LDFLAGS = -rpath $(libdir):$(pkglibdir)
+
+E_NetGraph_epplet_SOURCES = \
+E-NetGraph.c cloak.c cloak.h
+E_NetGraph_epplet_DEPENDENCIES = $(top_srcdir)/api/libepplet.la
+E_NetGraph_epplet_LDFLAGS = -rpath $(libdir):$(pkglibdir)
 
 E_ScreenSave_epplet_SOURCES = \
 E-ScreenSave.c E-ScreenSave.h cloak.c utils.c utils.h cloak.h
